--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.5.3
   pdf: ^3.11.3
   printing: ^5.14.2
+  path_provider: ^2.1.5
+  open_file: ^3.5.10
   intl: ^0.20.2
   fluttertoast: ^8.2.12
 
